# aquaDB

./: Cargo.toml  README  README.md
evalexpr/: .cargo_vcs_info.json  Cargo.toml
evalexpr/src/context/: mod.rs
evalexpr/src/operator/: display.rs  mod.rs
evalexpr/src/token/: display.rs  mod.rs
evalexpr/src/tree/: mod.rs
src/: init.rs  main.rs
src/lib/: common.rs  lib.rs
src/lib/common/: boolean.rs  btree_multimap.rs  fileops.rs  macros.rs  mod.rs  net.rs  numerical.rs  table.rs
src/lib/database/: db.rs  mod.rs  plan_query.rs  server.rs
src/lib/index/: btree_index.rs  hash_index.rs  mod.rs
src/lib/interface/: message.rs
src/lib/meta/: catalogmgr.rs  mod.rs
src/lib/query/: concrete_types.rs  executor.rs  mod.rs  plan.rs  select_node.rs  seq_scan.rs  tuple_table.rs
src/lib/query/algebra/: mod.rs  pretty.rs
src/lib/query/physical/: mod.rs  realize.rs  utils.rs
src/lib/query/tree/: mod.rs  node.rs  project.rs
src/lib/schema/: mod.rs  null_bitmap.rs  schema.rs  types.rs
src/lib/sql/: conditional.rs  create_table.rs  eval.rs  mod.rs  parser.rs  sql.pest
src/lib/sql/query/: delete.rs  insert.rs  mod.rs  query.rs  select.rs  update.rs
src/lib/storage/: blkmgr.rs  blockid.rs  buffermgr.rs  filemgr.rs  frame.rs  free_space.rs  heap.rs  logmgr.rs  mod.rs  page.rs  storagemgr.rs  tuple.rs
src/lib/table/: btree_iter.rs  direct_access.rs  hash_iter.rs  heap_iter.rs  mod.rs  tablemgr.rs
tests/: executor_test.rs  heap_test.rs  schema_test.rs  storage_test.rs  tablemgr_test.rs  test_util.rs
tests/common/: mod.rs  random.rs  utils.rs
