[package]
name = "aquaDB"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "aqua"
path = "src/lib/lib.rs"

[[bin]]
name = "aquaDB"
path = "src/bin/main.rs"


[dependencies]
positioned-io2 = "0.3.4"
chrono = "0.4.22"
debug_print = "1.0.0"
#serde = {version="1.0.151",features =["derive"]}
bincode = "2.0.0-rc.2"
thiserror = "1.0.38"

[dev-dependencies]
rand = "0.8.5"
names = "0.14.0"
lazy_static = "1.4.0"