[package]
name = "aquaDB"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "aqua"
path = "src/lib/lib.rs"

[[bin]]
name = "aquaDB"
path = "src/bin/server/main.rs"

[[bin]]
name = "aqua-client"
path = "src/bin/client/main.rs"


[dependencies]
positioned-io2 = "0.3.4"
chrono = "0.4.22"
debug_print = "1.0.0"
#serde = {version="1.0.151",features =["derive"]}
bincode = "2.0.0-rc.2"
thiserror = "1.0.38"
#predicates = "2.1.4"
#evalexpr = {version = "8.1.0", features=["regex_support"]}
evalexpr = {path = "evalexpr"}
num-order= "1.0.4"
rand = "0.8.5"
#itertools = "0.10.5"
sdbm = "0.1.3"

ctrlc = "3.2.5"
pest = "2.2.1"
#pest_derive = "2.5.5"
pest_consume = "1.1.3"
regex = "1.7.1"
set_env = "1.3.4"
lazy_static = "1.4.0"
tabled = "0.12.0"
pest_ascii_tree = "0.1.0"
#ptree = "0.4.0"
#genawaiter = "0.99.1"
fltk = { version = "^1.4.5", features = ["fltk-bundled"] }
fltk-table = "0.3.0"
fltk-theme = "0.7.0"
crossbeam = "0.8.2"

[dev-dependencies]
rand = "0.8.5"
names = "0.14.0"
lazy_static = "1.4.0"
